# IT3385_MLOps_Assignment

./: Dockerfile  Introduction.py  LICENSE  Makefile  README.md  mlflow.db  pyproject.toml
.streamlit/: config.toml
data/processed/: Lung_Patient_Cleaned.csv  alzheimers_disease_data_cleaned.csv
data/raw/: alzheimers_disease_data_test.csv  lung_cancer_patient_dataset(SAMPLE).csv
mlops_assignment/: dataset.py  features.py  predict_alzheimer.py  predict_lung_cancer.py  verify_lung_cancer_model.py
mlops_assignment/modeling/: predict.py  train.py
mlruns/0/: meta.yaml
mlruns/256616359541716334/: meta.yaml
mlruns/256616359541716334/0c441de0087d4af98ba6fc944cb84062/: meta.yaml
mlruns/256616359541716334/104536acd7304acc9fa10ec5f162faff/: meta.yaml
mlruns/256616359541716334/11113f3baaa9415e896c12907c207871/: meta.yaml
mlruns/256616359541716334/124eebda7aaf473e945c05a6d9ceadb6/: meta.yaml
mlruns/256616359541716334/1b9d0ea9fbbe4b5d807dfac0ec15df0a/: meta.yaml
mlruns/449892257907977226/: meta.yaml
mlruns/645305697115739496/: meta.yaml
models/: alzheimer_pred_model.pkl  lung_cancer_pipeline.pkl
notebooks/: 231763R_WinstonPawitraLystanto_Notebook.ipynb  mlflow.db
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/rui_hong/: 230684L_ChewRuiHong_Modelling.ipynb  230684L_ChewRuiiHong_EDA.ipynb
notebooks/winston/: 231763R_WinstonPawitraLystanto_Notebook.ipynb
pages/: 1_Alzheimer's Disease (single).py  1_Alzheimer's Disease.py  1_🧠 Alzheimer's Disease.py  2_Alzheimer's Disease (batch).py  2_🫁 Lung_Cancer.py
(+2176 files in other folders)
