[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mlops_assignment"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Winston \u0026 Rui Hong" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "ipython",
    "isort",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "scikit-learn",
    "tqdm",
    "typer",
    "pycaret[full] (>=3.3.2,<4.0.0)",
    "streamlit (>=1.53.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "mlflow (==2.9.2)",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["mlops_assignment"]
force_sort_within_sections = true


